--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "3.4.1",
     "sass": "^1.49.0"
   },
